Updated required changes
