# cornucopia.owasp.org/src/domain/cre/creController.ts
@@ -1,44 +1,44 @@
 import type { Card } from "../card/card";
 import type { MappingController } from "../mapping/mappingController";
 
-export type Cre  = 
-{
-    doctype: string; 
-    name: any; 
-    section: string; 
-    description: string; 
-    sectionID: string; 
-    hyperlink: string; 
-    links: CreLink[];
-    tags: never[];
-    tooltype: string;
-}
+export type Cre =
+    {
+        doctype: string;
+        name: any;
+        section: string;
+        description: string;
+        sectionID: string;
+        hyperlink: string;
+        links: CreLink[];
+        tags: never[];
+        tooltype: string;
+    }
 
-export type CreLink = 
-{
-    document: CreDocument;
-    ltype: string;
-}
+export type CreLink =
+    {
+        document: CreDocument;
+        ltype: string;
+    }
 
-export type CreDocument = 
-{
-    doctype: string;
-    id: string;
-}
+export type CreDocument =
+    {
+        doctype: string;
+        id: string;
+    }
 
 
 export class CreController {
     private deck: Map<string, Card>;
     private controller: MappingController;
 
-    private static editions: Map<string, string>  = new Map<string, string>( [
+    private static editions: Map<string, string> = new Map<string, string>([
         ['webapp', "OWASP Cornucopia Website App Edition"],
         ['mobileapp', "OWASP Cornucopia Mobile App Edition"],
         ['companion', "OWASP Cornucopia Companion Edition"]
         ['dbd', "Cornucopia Digital Benefits and Disbenefits Edition"]
     ]);
 
-    private static category: Map<string, string>  = new Map<string, string>( [
+    private static category: Map<string, string> = new Map<string, string>([
         ['webapp', "Website Application"],
         ['mobileapp', "Mobile Application"],
         ['companion', "Companion suits"]
@@ -54,12 +54,12 @@ export class CreController {
         return CreController.editions.get(edition) || edition;
     }
 
-    public getCreMapping(edition: string, lang: string) : any {
-        if (!CreController.editions.has(edition)) return {"meta": {}, "standards": []};
+    public getCreMapping(edition: string, lang: string): any {
+        if (!CreController.editions.has(edition)) return { "meta": {}, "standards": [] };
         let standards: Cre[] = [];
         (this.deck || []).forEach(
-                (card: Card) => (card.edition == edition) && standards.push(this.generateDoc(card))
-            );
+            (card: Card) => (card.edition == edition) && standards.push(this.generateDoc(card))
+        );
         return {
             "meta": {
                 "edition": CreController.editions.get(edition),
